--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,10 +11,10 @@ services:
     - -c
     - 'trap : TERM INT; sleep infinity & wait'
     ports:
-    - 7070:7070
-    - 7071:7071
-    - 8000:8000
-    - 9000:9000
+    - 7070:7070    # event server
+    - 7071:7071    # dashboard
+    - 8000:8000    # serving (spark application)
+    - 9000:9000    # admin server
     environment:
       PIO_DB_HOST: postgres
       PIO_DB: pio
